@@ -1514,13 +1514,34 @@ decl_stmt|;
 name|SchemaField
 name|schemaField
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|schemaField
+operator|=
 name|schema
 operator|.
 name|getField
 argument_list|(
 name|field
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 if|if
 condition|(
 operator|!
